<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mortgage</string>
    <string name="action_settings">Settings</string>
    <string name="purchase_price">Purchase Price:</string>
    <string name="down_payment">Down Payment:</string>
    <string name="mortgage_term">Mortgage Term:</string>
    <string name="interest_rate">Interest Rate:</string>
    <string name="property_tax">Property Tax:</string>
    <string name="property_insurance">Property Insurance:</string>
    <string name="pmi">PMI:</string>
    <string name="zip">ZIP Code:</string>
    <string name="first_payment_date">First Payment Date (mm/dd/yyyy):</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="total_monthly">Total Monthly Payment:</string>
    <string name="total_yearly">Total Yearly Payment:</string>
    <string name="payoff_date">Payoff Date:</string>

</resources>
